# Estudo-Ionic

./: .gitignore  README.md  RELATORIO_01.docx  package-lock.json  package.json  pyproject.toml  start.sh  vercel-build.sh
backend/: requirements.txt  start.sh
backend/app/: database.py  main.py  models.py  schemas.py  utils.py
backend/app/routes/: card_categoria.py  cards.py  categorias.py  usuarios.py
src/app/: app.routes.ts
src/app/cadastro/: cadastro.page.html  cadastro.page.scss  cadastro.page.ts
src/app/guards/: auth.guard.ts
src/app/home/: home.page.html  home.page.scss  home.page.ts
src/app/login/: login.page.html  login.page.scss  login.page.ts
src/app/services/: card.service.ts  categoria.service.ts  usuario.service.ts
src/environments/: environment.prod.ts  environment.ts
www/: 3rdpartylicenses.txt  chunk-2F5XDJOL.js  chunk-2QBPYP3L.js  chunk-3IDB5CPC.js  chunk-3LFUW4KW.js  chunk-3YEOX2IC.js  chunk-4IHEWLFZ.js  chunk-4VV57NQD.js  chunk-5GWG5HNH.js  chunk-5NIHS2HS.js  chunk-6TT6EWAB.js  chunk-76AT54JJ.js  chunk-AFAWGKVO.js  chunk-B4L3AVKA.js  chunk-BH4DSK3R.js  chunk-BHFXHSCA.js  chunk-BOFJ2P3E.js  chunk-CVJJZ4YG.js  chunk-DCQIV553.js  chunk-DGOHYDZN.js  chunk-DRQW25TX.js  chunk-DTF23OMH.js  chunk-FLTN6NQY.js  chunk-FO3DAXY7.js  chunk-FRIFX2NF.js  chunk-FV4MGWLY.js  chunk-G4KV4PTY.js  chunk-HPO3ADYJ.js  chunk-HX7XWKFV.js  chunk-HYV2YP7Y.js  chunk-HZKEDSWX.js  chunk-I2VBXCZQ.js  chunk-IDUCJKTZ.js  chunk-ISCHQF4O.js  chunk-IXJBKKH7.js  chunk-JAHTVOLD.js  chunk-JJPTW4KJ.js  chunk-JWALPVSZ.js  chunk-K2ADYOWP.js  chunk-KAOBZ7XY.js  (+41 more)
(+2 files in other folders)
