[project]
name = "estudo-ionic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==4.3.0",
    "fastapi==0.115.12",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary==2.9.10",
    "sqlalchemy==2.0.41",
    "uvicorn==0.34.2",
]
